frontend: fixed a bug with not enough vertical space on safari

--- a/frontend/src/components/schedule/Schedule.module.css
+++ b/frontend/src/components/schedule/Schedule.module.css
@@ -208,7 +208,12 @@
         font-weight: 600;
         white-space: nowrap;
 
-        overflow: clip;
+        /*
+        allows ellipsis to happen. if overflow-y is set then this doesn't render 
+        correctly on safari when width is not enough (the code, instead of the location, 
+        would get clipped)
+        */
+        overflow-x: clip;
         text-overflow: ellipsis;
     }
 
